add docker run file.  add live reload port to gulp.  updated index.html.  change WS title

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Angular 2</title>
+	<title>Up and Running with Angular</title>
 
 
 	<meta charset="utf-8">
@@ -19,7 +19,7 @@
 	<div id="container">
 		<div id="header">
 			<a href="#" class="menu header-btn" id="toggle-toc"></a>
-			<h1>Angular 2 Tutorial</h1>
+			<h1>Up and Running with Angular Workshop</h1>
 			<a href="https://github.com/digitaldrummerj/angular-tutorial" class="github header-btn"></a>
 		</div>
 		<div id="content-container">
