removed old unused images.  updated environment chapter.  removed old text from lock down chapter.  added note about angular version ws was written/tested for

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Up and Running with Angular</title>
+	<title>Up and Running with Angular Workshop</title>
 
 
 	<meta charset="utf-8">
-	<meta name="description" content="Labs for Angular 2 Workshop">
+	<meta name="description" content="Up and Running with Angular Workshop">
 	<meta name="author" content="Justin James">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -61,11 +61,6 @@
 				<hr>
 
 				<div class="chapter">
-					@@include(markdown("chapters/chapter09-create-service.md"))
-				</div>
-				<hr>
-
-				<div class="chapter">
 					@@include(markdown("chapters/chapter05-environments.md"))
 				</div>
 
@@ -81,6 +76,11 @@
 
 				<div class="chapter">
 					@@include(markdown("chapters/chapter99-deploy.md"))
+				</div>
+				<hr>
+
+				<div class="chapter">
+					@@include(markdown("chapters/chapter09-bonus-todo-features.md"))
 				</div>
 				<hr>
 
