updated order of content

--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,12 @@
 				<hr>
 
 				<div class="chapter">
-					@@include(markdown("chapters/chapter09-bonus-todo-features.md"))
+					@@include(markdown("chapters/chapter12-bonus-todo-features.md"))
+				</div>
+				<hr>
+
+				<div class="chapter">
+					@@include(markdown("chapters/chapter13-bonus-login-features.md"))
 				</div>
 				<hr>
 
