--- a/index.html
+++ b/index.html
@@ -1988,16 +1988,22 @@ createdAt: Date;
 <ol>
 <li>Open the src\app\shared\services\todo.service.ts file</li>
 <li><p>Import the environment file</p>
-<pre><code class="lang-TypeScript">
+<pre><code class="lang-TypeScript"> import { environment } from &#39;../../../environments/environment&#39;;
 </code></pre>
 </li>
-<li><p>Create a variable called baseUrl inside the TodoService class that gets the variable from the environment file</p>
-<pre><code class="lang-TypeScript">
+<li><p>Create a private variable called url inside the TodoService class that gets the apiBaseUrl from the environment file and append on the /todo</p>
+<pre><code class="lang-TypeScript">   private url: string = `${environment.apiBaseUrl}/todo`;
 </code></pre>
 </li>
-<li><p>Update each of the http calls to use the baseUrl variable instead of hard coding the url</p>
-<pre><code class="lang-TypeScript">
+<li><p>For the save and getAll functions update the hard coded url to use the class level url variable.  You will need to change url to this.url in order to access the class level variable.</p>
+</li>
+<li><p>For the updateTodo and deleteTodo we need to replace the hard coded url with the class level url variable.  Since we are already using string interpolation to create the string, we need to replace the hard coded value with <code>${this.url}</code></p>
+<pre><code class="lang-TypeScript"> let url = `${this.url}/${todo.id}`;
 </code></pre>
+</li>
+<li><p>Everything should still work to list, insert, update and delete todo items as before but now the url is no longer hard coded and can easily be changed as you move to different environments.</p>
+</li>
+<li><p>Now repeat the same process with the AuthService</p>
 </li>
 </ol>
 <div class="exercise-end"></div>
@@ -2011,9 +2017,11 @@ createdAt: Date;
 <h3 id="goals">Goals</h3>
 <h3 id="create-guard">Create Guard</h3>
 <h4 class="exercise-start">
-  <b>Exercise</b>: Create Guard
+  <b>Exercise</b>: Check If User Is Logged In
 </h4>
 
+<pre><code class="lang-bash">ng generate guards shared/guards/isloggedin
+</code></pre>
 <div class="exercise-end"></div>
 
 <h4 class="exercise-start">
@@ -2041,32 +2049,6 @@ createdAt: Date;
 
 <div class="exercise-end"></div>
 
-<h4 class="exercise-start">
-  <b>Exercise</b>: Test Unauthorized Access
-</h4>
-
-<p>To test that the guard is working, we need to return a false from canActivate and redirect to the unauthorized route.  </p>
-<ol>
-<li><p>In the admin.guard.ts file, change the canActivate route to the following</p>
-<pre><code class="lang-TypeScript"> canActivate(): boolean {
- this.router.navigate([&#39;/unauthorized&#39;]);
- return false;
-}
-</code></pre>
-</li>
-<li><p>Import the router into the admin.guard.ts file</p>
-<pre><code class="lang-TypeScript">import { Router } from &#39;@angular/router&#39;;
-</code></pre>
-</li>
-<li><p>Inject the Router into the constructor</p>
-<pre><code class="lang-TypeScript">constructor(private router: Router) { }
-</code></pre>
-</li>
-<li><p>Now if you navigate to <a href="http://localhost:4200/admin">http://localhost:4200/admin</a> you will be redirected to the unauthorized route</p>
-<p><img src="images/unauthorized-view.png" alt="unauthorized view"></p>
-</li>
-</ol>
-<div class="exercise-end"></div>
 
 				</div>
 				<hr>
@@ -2118,18 +2100,6 @@ createdAt: Date;
 </li>
 <li><p>4 files are created just like when we created the TodoComponent earlier.  You will notice this time though that the Angular Cli put a dash between not and found.  It will automatically do that when it encounters an uppercase character.</p>
 <p> <img src="images/ng2/notfound-generated.png" alt="not found generated file list"></p>
-</li>
-<li><p>In the src\app\app.module.ts file you may need to add an import statement for the NotFoundComponent and add it to the declarations list to make it available.  Sometimes the Angular CLI adds it automatically for you</p>
-<pre><code class="lang-TypeScript"> import { NotFoundComponent } from &#39;./not-found/not-found.component&#39;;
-</code></pre>
-<pre><code class="lang-TypeScript"> declarations: [
-     AppComponent,
-     HeaderComponent,
-     FooterComponent,
-     TodoComponent,
-     NotFoundComponent
- ],
-</code></pre>
 </li>
 <li><p>In the src\app\app-routing.module.ts file, add an import statement for the NotFoundComponent </p>
 <pre><code class="lang-TypeScript"> import { NotFoundComponent } from &#39;./not-found/not-found.component&#39;;
@@ -2185,6 +2155,8 @@ Note that this will remove the dist directory before build.
 
 				<div class="chapter">
 					<h2 id="bonus-additional-todo-features">Bonus: Additional Todo Features</h2>
+<h3 id="overview">Overview</h3>
+<h3 id="goals">Goals</h3>
 <h3 id="displaying-open-item-count">Displaying Open Item Count</h3>
 <p>It would be nice to know how many todo items that the user has and display that in the UI.  You will need to make sure to update the open number when pulling, updating, and deleting todo items.</p>
 <h4 class="exercise-start">
@@ -2379,6 +2351,18 @@ Note that this will remove the dist directory before build.
 <p>Instead, we can clear out the field on a successful save call by adding a call to <code>this.addForm.reset();</code></p>
 <pre><code class="lang-TypeScript">
 </code></pre>
+
+				</div>
+				<hr>
+
+				<div class="chapter">
+					<h2 id="bonus-additional-login-features">Bonus: Additional Login Features</h2>
+<h3 id="overview">Overview</h3>
+<h3 id="goals">Goals</h3>
+<h3 id="logout">Logout</h3>
+<h3 id="create-account">Create Account</h3>
+<h3 id="is-user-logged-out">Is User Logged Out</h3>
+<p>Before being able to signup for an account, we need the user to be logged out first.</p>
 
 				</div>
 				<hr>
