fixed several issues
* added --module to auth service generate
* added module import to app.module for http and forms
* cleaned up text to make it clearer
* moved account create to template forms chapter

--- a/src/index.html
+++ b/src/index.html
@@ -45,10 +45,6 @@
 					@@include(markdown("chapters/chapter04-bootstrap.md"))
 				</div>
 				<hr>
-				<div class="chapter">
-					@@include(markdown("chapters/chapter06-header-footer.md"))
-				</div>
-				<hr>
 
 				<div class="chapter">
 					@@include(markdown("chapters/chapter08_1-template-forms.md"))
@@ -73,6 +69,10 @@
 					@@include(markdown("chapters/chapter10-route-not-found.md"))
 				</div>
 				<hr>
+				<div class="chapter">
+					@@include(markdown("chapters/chapter06-header-footer.md"))
+				</div>
+				<hr>
 
 				<div class="chapter">
 					@@include(markdown("chapters/chapter99-deploy.md"))
@@ -91,6 +91,10 @@
 
 				<div class="chapter">
 					@@include(markdown("chapters/chapter100-thankyou.md"))
+				</div>
+				<hr>
+				<div class="chapter">
+					@@include(markdown("../tags.md"))
 				</div>
 				<hr>
 			</div>
