fixed issue with using wrong variable for login error msg

--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
 <li><p>We want to put our message after the cancel button but inside the <code>&lt;/form&gt;</code> tag</p>
 </li>
 <li><p>Add the following alert message</p>
-<pre><code class="lang-html"> &lt;div *ngIf=&quot;loginInvalid&quot; class=&quot;alert alert-danger&quot;&gt;
+<pre><code class="lang-html"> &lt;div *ngIf=&quot;invalidLogin&quot; class=&quot;alert alert-danger&quot;&gt;
      Invalid Login
  &lt;/div&gt;
 </code></pre>
